# platzi-logistic-regression

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: 01_jss_first_regression.ipynb  02_jss_binomial.ipynb
references/: 02_regresion_logistica_binomial.ipynb
