[project]
name = "platz-logistic-regression"
version = "0.1.0"
description = "Logistic Regression for Data Science with Python"
authors = [{ name = "Jason", email = "jasonssdev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "notebook",
    "ipykernel",
    "ipywidgets",
    "python-dotenv",
    "openpyxl",
    "xlrd",
    "statsmodels",
    "pathlib",
    "scikit-learn",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
